# my_imgui_project

./: .buildAndRun.sh.swp  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  buildAndRun.sh  imgui.ini  main.cpp  theme.hpp  winBuildAndRun.bat
CMakeModules/: FindGLEW.cmake  FindGLFW.cmake  FindImGui.cmake
CMakeModules_apple/: FindLiblo.cmake  FindNDI.cmake
CMakeModules_windows/: FindGLEW.cmake  FindGLFW.cmake  FindLiblo.cmake  FindNDI.cmake
assets/: UltimateKaliCircuits.isf.fs
assets/isf/: UltimateKaliCircuits.isf.fs  moving2Valse.isf.fs  testPatterns.isf.fs
modules/: GuiManager.cpp  GuiManager.hpp  LibloClient.cpp  LibloClient.hpp  NDISender.cpp  NDISender.hpp  inputhandler.cpp  inputhandler.hpp  mainWindow.hpp  renderable.cpp  renderable.hpp
operators/: isfParameters.cpp  isfParameters.hpp  isfRenderer.cpp  isfRenderer.hpp
types/: keyframe.hpp  timer.cpp  timer.hpp
widgets/: WidgetOp.cpp  WidgetOp.hpp  curveWidget.cpp  curveWidget.hpp  tangy.style.toml  timerWidget.cpp  timerWidget.hpp
